Changed from ArrayList to LinkedList